apps/omni-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-tools
spec:
  selector:
    app: omni-tools
  ports:
    - port: 80
      targetPort: 80
